--- a/roles/ros1/tasks/main.yml
+++ b/roles/ros1/tasks/main.yml
@@ -18,13 +18,13 @@
   become: yes
   ansible.builtin.apt_key:
     url: https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc
-    keyring: /etc/apt/trusted.gpg.d/ros-official.gpg
+    keyring: /usr/share/keyrings/ros-official.gpg
 
 - name: Add ROS APT repository
   become: yes
   ansible.builtin.apt_repository:
     repo: >-
-      deb [signed-by=/etc/apt/trusted.gpg.d/ros-official.gpg]
+      deb [Signed-By=/usr/share/keyrings/ros-official.gpg]
       http://packages.ros.org/ros/ubuntu
       {{ansible_facts.distribution_release}}
       main
