--- a/roles/gazebo/tasks/main.yml
+++ b/roles/gazebo/tasks/main.yml
@@ -1,20 +1,4 @@
 --- # tasks file for gazebo
-- name: Add Gazebo signing key
+- name: Install latest Gazebo
   become: yes
-  ansible.builtin.apt_key:
-    id: 67170598AF249743
-    keyring: /usr/share/keyrings/gazebo-official.gpg
-    keyserver: keyserver.ubuntu.com
-- name: Add Gazebo APT repository
-  become: yes
-  ansible.builtin.apt_repository:
-    repo: >-
-      deb [Signed-By=/usr/share/keyrings/gazebo-official.gpg]
-      http://packages.osrfoundation.org/gazebo/ubuntu-stable
-      {{ansible_facts.distribution_release}}
-      main
-    filename: gazebo-official
-- name: Install Gazebo
-  become: yes
-  ansible.builtin.apt:
-    name: "gazebo{{gazebo_version}}*"
+  shell: curl -sSL http://get.gazebosim.org | sh
