Rename sources file for ros1-latest
Rename to ros1-latest to match the official image.

--- a/roles/ros1/tasks/main.yml
+++ b/roles/ros1/tasks/main.yml
@@ -28,7 +28,7 @@
       http://packages.ros.org/ros/ubuntu
       {{ansible_facts.distribution_release}}
       main
-    filename: ros-official
+    filename: ros1-latest
 
 - name: Install latest Gazebo
   include_role:
