Add colcon-mixin package
This package is commonly used so add as a default.

--- a/roles/ros2/defaults/main.yml
+++ b/roles/ros2/defaults/main.yml
@@ -10,6 +10,7 @@ dev:
 dev_packages:
   # Python packages to install for ROS development.
   - colcon-common-extensions
+  - colcon-mixin
   - dev
   - empy
   - rosdep
